Fixed LinearLayout drag'n drop